Add deployment config: Render backend, Vercel frontend, dynamic CORS